# chester-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  download.sh  migrate.sh  release.toml
database/: metadata.sqlite3  schema.sql
media/config/: placeholder.md
media/metadata/: placeholder.md
migrations/: 20251001180437_init.sql  20251001182319_restructure.sql  20251001183914_tags_table.sql
src/: autocomplete.rs  autocomplete_example.rs  chester.rs  cmd_admin.rs  cmd_controls.rs  cmd_library.rs  cmd_management.rs  commands.rs  constants.rs  definitions.rs  downloader.rs  ex.rs  example.rs  json_handling.rs  library.rs  library_sync.rs  main.rs  merge.rs  service.rs  track_resolver.rs
src/database/: mod.rs  schema.rs
src/db/: repository.rs
src/discord/: autocomplete.rs  mod.rs
src/discord/commands/: browse.rs  controls.rs  management.rs  mod.rs
src/utils/: context.rs  downloader.rs  format.rs  mod.rs  track_resolver.rs
